// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`relations time slider a graded instant nodes frame at the earliest stop (values and bands kept, edges still scrubbed) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":245.6,"y":192.981517}},
{"type":"lineTo","props":{"x":117.460254,"y":119}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":245.6,"y":192.981517}},{"type":"lineTo","props":{"x":117.460254,"y":119}}]}},
{"type":"setTransform","props":{"a":0.5,"b":-0.866025,"c":0.866025,"d":0.5,"e":117.460254,"f":119}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#f2495c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":108.8,"y":114}},
{"type":"lineTo","props":{"x":236.939746,"y":40.018483}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":108.8,"y":114}},{"type":"lineTo","props":{"x":236.939746,"y":40.018483}}]}},
{"type":"setTransform","props":{"a":0.5,"b":0.866025,"c":-0.866025,"d":0.5,"e":236.939746,"f":40.018483}},
{"type":"fillStyle","props":{"value":"#f2495c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":245.6,"f":192.981517}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":108.8,"f":114}},
{"type":"fillStyle","props":{"value":"#f2495c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":245.6,"f":35.018483}},
{"type":"fillStyle","props":{"value":"#ff9830"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":245.6,"f":207.981517}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"gateway","x":0,"y":6,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"10","x":0,"y":18,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":108.8,"f":129}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"api","x":0,"y":6,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"90","x":0,"y":18,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":245.6,"f":50.018483}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"db","x":0,"y":6,"maxWidth":null}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"50","x":0,"y":18,"maxWidth":null}},
{"type":"setTransform","props":{"a":0.866025,"b":0.5,"c":-0.5,"d":0.866025,"e":181.530127,"f":150.990758}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"1","x":0,"y":-6,"maxWidth":null}},
{"type":"setTransform","props":{"a":0.866025,"b":-0.5,"c":0.5,"d":0.866025,"e":172.869873,"f":72.009242}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"10","x":0,"y":-6,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;

exports[`relations time slider the graph at the earliest timestamp, under the slider strip (edge weights 1 and 10) 1`] = `
[
{"type":"save","props":{}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"strokeStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":10}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":245.6,"y":192.981517}},
{"type":"lineTo","props":{"x":117.460254,"y":119}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":245.6,"y":192.981517}},{"type":"lineTo","props":{"x":117.460254,"y":119}}]}},
{"type":"setTransform","props":{"a":0.5,"b":-0.866025,"c":0.866025,"d":0.5,"e":117.460254,"f":119}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":0,"f":0}},
{"type":"strokeStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":108.8,"y":114}},
{"type":"lineTo","props":{"x":236.939746,"y":40.018483}},
{"type":"stroke","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":108.8,"y":114}},{"type":"lineTo","props":{"x":236.939746,"y":40.018483}}]}},
{"type":"setTransform","props":{"a":0.5,"b":0.866025,"c":-0.866025,"d":0.5,"e":236.939746,"f":40.018483}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":0,"y":0}},
{"type":"lineTo","props":{"x":6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":7.5}},
{"type":"lineTo","props":{"x":-6.666667,"y":10}},
{"type":"lineTo","props":{"x":0,"y":0}},
{"type":"closePath","props":{}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":0,"y":0}},{"type":"lineTo","props":{"x":6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":7.5}},{"type":"lineTo","props":{"x":-6.666667,"y":10}},{"type":"lineTo","props":{"x":0,"y":0}},{"type":"closePath","props":{}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":245.6,"f":192.981517}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"fillStyle","props":{"value":"#73bf69"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":108.8,"f":114}},
{"type":"fillStyle","props":{"value":"#f2cc0c"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":10,"b":0,"c":0,"d":10,"e":245.6,"f":35.018483}},
{"type":"fillStyle","props":{"value":"#5794f2"}},
{"type":"beginPath","props":{}},
{"type":"moveTo","props":{"x":1,"y":0}},
{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}},
{"type":"fill","props":{"path":[{"type":"beginPath","props":{}},{"type":"moveTo","props":{"x":1,"y":0}},{"type":"arc","props":{"x":0,"y":0,"radius":1,"startAngle":0,"endAngle":6.283185,"anticlockwise":false}}],"fillRule":"nonzero"}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":245.6,"f":207.981517}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"globalCompositeOperation","props":{"value":"source-over"}},
{"type":"shadowOffsetX","props":{"value":0}},
{"type":"shadowOffsetY","props":{"value":0}},
{"type":"shadowColor","props":{"value":"#000000"}},
{"type":"fillStyle","props":{"value":"#ccccdc"}},
{"type":"globalAlpha","props":{"value":1}},
{"type":"lineCap","props":{"value":"butt"}},
{"type":"lineJoin","props":{"value":"miter"}},
{"type":"miterLimit","props":{"value":2}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"gateway","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":108.8,"f":129}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"api","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":1,"b":0,"c":0,"d":1,"e":245.6,"f":50.018483}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"db","x":0,"y":6,"maxWidth":null}},
{"type":"setTransform","props":{"a":0.866025,"b":0.5,"c":-0.5,"d":0.866025,"e":181.530127,"f":150.990758}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"globalAlpha","props":{"value":0.5}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"1","x":0,"y":-6,"maxWidth":null}},
{"type":"setTransform","props":{"a":0.866025,"b":-0.5,"c":0.5,"d":0.866025,"e":172.869873,"f":72.009242}},
{"type":"font","props":{"value":"12px 'Inter', 'Helvetica', 'Arial', sans-serif"}},
{"type":"textAlign","props":{"value":"center"}},
{"type":"textBaseline","props":{"value":"middle"}},
{"type":"fillText","props":{"text":"10","x":0,"y":-6,"maxWidth":null}},
{"type":"restore","props":{}}
]
`;
